# FastOpenDBBrasil

./: .gitignore  README.md  pyproject.toml
fast_open_db_brasil/: app.py  schemas.py
migrations/: env.py
migrations/versions/: 983a526712a2_adicionando_campo_updated_at_a_tabela_.py  e84400cfafd1_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_settings.py
